resolved overflow-x caused by aos library

--- a/style.css
+++ b/style.css
@@ -400,6 +400,7 @@ p {
   margin-top: 2em;
   display: flex;
   flex-wrap: wrap;
+  overflow-x: hidden;
 }
 
 .teacher {
